@@ -1,3 +1,7 @@
+2012-03-22  Jason Merrill  <jason@redhat.com>
+
+	* g++.dg/torture/pr52582.C: New.
+
 2012-03-22  Georg-Johann Lay  <avr@gjlay.de>
 
 	Backport from 2012-03-20 mainline r185583.
